<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="bottom"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ToggleButton
                android:id="@+id/sensor0toggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/s0"
                android:textOff="@string/s0_off"
                android:textOn="@string/s0_on" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ToggleButton
                android:id="@+id/sensor2toggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s2"
                android:textOff="@string/s2_off"
                android:textOn="@string/s2_on" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ToggleButton
                android:id="@+id/sensor4toggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s4"
                android:textOff="@string/s4_off"
                android:textOn="@string/s4_on" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ToggleButton
                android:id="@+id/sensor1toggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s1"
                android:textOff="@string/s1_off"
                android:textOn="@string/s1_on" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ToggleButton
                android:id="@+id/sensor3toggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s3"
                android:textOff="@string/s3_off"
                android:textOn="@string/s3_on" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ToggleButton
                android:id="@+id/sensor5toggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s5"
                android:textOff="@string/s5_off"
                android:textOn="@string/s5_on" />

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/measureEveryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Measure Every (sec):" />

        <EditText
            android:id="@+id/intervalEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/forTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="For:" />

        <EditText
            android:id="@+id/minutesEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/colonTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=":" />

        <EditText
            android:id="@+id/secondsEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>

</LinearLayout>
