<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ben.colorsensorrgbstreamer6well.MainActivity">

    <com.androidplot.xy.XYPlot
        android:id="@+id/plot"
        style="@style/APDefacto.Light"
        android:layout_width="661dp"
        android:layout_height="242dp"
        android:layout_below="@+id/bluetoothbutton"
        android:layout_marginStart="-43dp"
        android:layout_marginTop="-16dp"
        android:layout_toEndOf="@+id/textView4"
        app:domainTitle="Measurements"
        app:graphMarginLeft="32dp"
        app:graphMarginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lineLabelRotationBottom="-45"
        app:lineLabels="left|bottom"
        app:rangeTitle="Value"
        app:title="A Simple XY Plot" />

    <Button
        android:id="@+id/bluetoothbutton"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:minHeight="67dp"
        android:minWidth="128dip"
        android:text="@string/bluetooth" />

    <Button
        android:id="@+id/connectbutton"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@+id/bluetoothbutton"
        android:minWidth="128dip"
        android:minHeight="67dip"
        android:text="@string/connect" />

    <Button
        android:id="@+id/measurebutton"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@+id/connectbutton"
        android:minWidth="128dip"
        android:minHeight="67dip"
        android:text="@string/measure" />


    <Button
        android:id="@+id/savebutton"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@+id/measurebutton"
        android:layout_marginTop="2dp"
        android:minWidth="128dip"
        android:minHeight="67dip"
        android:text="@string/save" />

    <Button
        android:id="@+id/draw_button"
        android:layout_width="128dp"
        android:layout_height="60dp"
        android:layout_below="@+id/savebutton"
        android:layout_alignStart="@+id/bluetoothbutton"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/draw_fluid" />

    <TextView
        android:text="@string/data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/bluetoothbutton"
        android:id="@+id/textView4" />

    <TextView
        android:text="@string/red"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:id="@+id/redtext"
        android:layout_alignTop="@id/textView4"
        android:layout_toEndOf="@+id/textView4"
        android:layout_marginStart="30dp" />

    <TextView
        android:text="@string/green"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="430dp"
        android:id="@+id/greentext"
        android:layout_alignTop="@id/redtext"
        android:layout_below="@+id/textView4" />

    <TextView
        android:text="@string/bluetext"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:layout_alignTop="@id/greentext"
        android:layout_height="wrap_content"
        android:layout_below="@+id/greentext"
        android:layout_marginStart="630dp"
        android:id="@+id/bluetext" />

    <Button
        android:id="@+id/reset_data_button"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/plot"
        android:layout_alignEnd="@+id/plot"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="0dp"
        android:text="@string/reset_data" />

    <Button
        android:id="@+id/release_button"
        android:layout_width="128dp"
        android:layout_height="62dp"
        android:layout_below="@+id/draw_button"
        android:layout_alignStart="@+id/bluetoothbutton"
        android:layout_marginTop="1dp"
        android:text="@string/release_fluid" />


</RelativeLayout>
